syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.chessmate.command";
option java_outer_classname = "CommandProto";

package command;

service Command {
   rpc Execute (CommandRequest) returns (CommandResponse);
}

message CommandRequest {
    oneof command {
        ChallengeAIRequest challengeAI = 2;
        ChallengeLichessRequest challengeLichess = 3;
        GetClockRequest getClock = 4;
        EndTurnRequest endTurn = 5;
        GetBoardStateRequest getBoardState = 6;
        GetEvaluationRequest getEvaluation = 7;
    }
}

message CommandResponse {
    oneof command {
        ChallengeAIResponse challengeAI = 1;
        ChallengeLichessResponse challengeLichess = 2;
        GetClockResponse getClock = 3;
        EndTurnResponse endTurn = 4;
        GetBoardStateResponse getBoardState = 5;
        GetEvaluationResponse getEvaluation = 6;
        CommandError error = 7;
    }
}
enum color {
        WHITE = 0;
        BLACK = 1;
        RANDOM = 2;
}

message timer {
    int32 blackTime = 1;
    int32 whiteTime = 2;
}

message ChallengeAIRequest {
    int32 level = 1;
    color color = 2;
    int32 white_timer = 3;
    int32 black_timer = 4;
}

message ChallengeLichessRequest {
    string gameid = 1;
    string lichessid = 2;
}

message GetClockRequest {}

message EndTurnRequest {
    string move = 2;
}

message GetBoardStateRequest {}

message GetEvaluationRequest {}

message GetClockResponse {
    int32 white = 1;
    int32 black = 2;
}

message GetBoardStateResponse {
    uint64 state = 1;
}

message GetEvaluationResponse {
    int32 evaluation = 1;
}

message EndTurnResponse {}

message ChallengeAIResponse {
}

message ChallengeLichessResponse {
    string gameid = 1;
    string lichessid = 2;
}

message CommandError {
    int32 code = 1;
    string msg = 2;
}
